invaders shoot back

--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
-    <meta name="author" content="Nik Lever, Mark Otto, Jacob Thornton, and Bootstrap contributors">
-    <title>Space Invadors</title> 
+    <title>Space Invaders</title> 
     <script src="index.js" async></script>
 </head>
 <body class="text-center">
@@ -14,6 +13,7 @@
             margin: 0;
             padding: 0;
             height: 100vh;
+            overflow: hidden;
         }
     </style>
     <canvas moz-opaque></canvas>
