--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            background-color: antiquewhite;
+            background-color: black;
         }
 
         div {
@@ -35,12 +35,12 @@
             font-family: 'sans-serif';
         }
     </style>
-    
+
+    <div>
+
     <p>
         <span>Score:</span> <span id="scoreEl">0</span>
     </p>
-
-    <div>
         <canvas moz-opaque></canvas>
     </div>
     
